--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,9 @@
                     </a>
                 </h1>
                     <div class="header__logo--right">
-                        <img class="header__logo__img" src="{% static "img/logo_ircam_black.png" %}" alt="Logo Manifeste 2016 ircam" width="200">
+                        <a href="http://ircam.fr" title="Url site ircam">
+                            <img class="header__logo__img" src="{% static "img/logo_ircam_black.png" %}" alt="Logo Manifeste 2016 ircam" width="200">
+                        </a>
                     </div>
                 {% endif %}
 
