--- a/festival/static/scss/config/_variables.scss
+++ b/festival/static/scss/config/_variables.scss
@@ -136,7 +136,7 @@ $svg_path  : "../svg";
 ---------------------------------- */
 // Z-indexes
 $zi_master : 9999;
-$zi_5      : 500;
+$zi_5      : 500; // .submemu
 $zi_4      : 400;
 $zi_1      : 300;
 $zi_2      : 200;
