--- a/festival/static/scss/index.scss
+++ b/festival/static/scss/index.scss
@@ -72,6 +72,11 @@
  */
 @import 'modules/artist-card',
         'modules/artist-detail',
+
+        'modules/video-card',
+
         'modules/event-card',
+
         'modules/hero-slider',
+
         'modules/user';
