--- a/festival/templates/festival/video_list.html
+++ b/festival/templates/festival/video_list.html
@@ -12,4 +12,18 @@
  </ul>
 </div>
 
+
+{# <div class="video__list">
+    <div class="video__card">
+        <div class="video__card__thumbnail">
+            <img src="http://source.unsplash.com/9Vx-QeC0-9Q/400x400" alt="">
+        </div>
+        <div class="video__card__info">
+            <h3 class="video__card__name">Video title</h3>
+        </div>
+        <a href="{% url 'festival-video-detail' video.slug %}" class="video__card__link">Lire la video</a>
+    </div>
+</div> #}
+
+
 {% endblock %}
