--- a/app/festival/static/scss/components/_sidebar.scss
+++ b/app/festival/static/scss/components/_sidebar.scss
@@ -13,3 +13,10 @@
   border-top: 1px solid #000;
   border-bottom: 1px solid #000;
 }
+
+.sidebar__entry {
+    font-size: 1rem;
+    margin: 0;
+    line-height: 1.4;
+    // color: $gray_dar;
+}
