--- a/app/templates/agenda/includes/filter_panel.html
+++ b/app/templates/agenda/includes/filter_panel.html
@@ -7,8 +7,8 @@
 <ul class="list-unstyled upcoming-events">
 {% for upcoming_event in upcoming_events %}
     <li>
-        <h3>
-            <a href="{{ upcoming_event.get_absolute_url }}">{{ upcoming_event.title }}</a>
+        <h3 class="sidebar__entry">
+            <a href="{{ upcoming_event.get_absolute_url }}" class="sidebar__entry">{{ upcoming_event.title }}</a>
         </h3>
     </li>
 {% endfor %}
@@ -23,8 +23,8 @@
 <ul class="list-unstyled recent-events">
     {% for recent_event in recent_events %}
     <li>
-        <h3>
-            <a href="{{ recent_event.get_absolute_url }}">{{ recent_event.title }}</a>
+        <h3 class="sidebar__entry">
+            <a href="{{ recent_event.get_absolute_url }}" class="sidebar__entry">{{ recent_event.title }}</a>
         </h3>
     </li>
     {% endfor %}
@@ -39,12 +39,12 @@
 {% for month in months %}
     {% ifchanged month.date.year %}
         {% if not forloop.first %}</ul>{% endif %}
-        <h3>{{ month.date.year }}</h3>
+        <h3 class="sidebar__entry">{{ month.date.year }}</h3>
             <ul class="list-unstyled">
                 {% endifchanged %}
                 <li>
-                    <h4>
-                        <a href="{% url "event_list_month" year=month.date.year month=month.date.month %}">{{ month.date|date:"F" }}</a> ({{ month.event_count }})
+                    <h4 class="sidebar__entry">
+                        <a href="{% url "event_list_month" year=month.date.year month=month.date.month %}" class="sidebar__entry">{{ month.date|date:"F" }}</a> ({{ month.event_count }})
                     </h4>
                 </li>
                 {% endfor %}
@@ -59,9 +59,9 @@
 <ul class="list-unstyled">
 {% for location in locations %}
 <li>
-    <h3>
-        <a href="{% url "event_list_location" location.slug %}">{{ location }}</a>
-    </h3> ({{ location.event_count }})
+    <h3 class="sidebar__entry">
+        <a href="{% url "event_list_location" location.slug %}" class="sidebar__entry">{{ location }}</a> ({{ location.event_count }})
+    </h3>
 </li>
 {% endfor %}
 </ul>
@@ -75,10 +75,10 @@
 <ul class="list-inline tag-cloud">
 {% for tag in tags %}
 <li>
-    <h3>
-        <a href="{% url "event_list_tag" tag.slug %}" class="tag-weight-{{ tag.weight }}">{{ tag }}</a>
+    <h3 class="sidebar__entry">
+        <a href="{% url "event_list_tag" tag.slug %}" class="sidebar__entry sidebar__entry--{{ tag.weight }}">{{ tag }}</a>
+        ({{ tag.item_count }})
     </h3>
-    ({{ tag.item_count }})
 </li>
 {% endfor %}
 </ul>
@@ -92,11 +92,10 @@
 <ul class="list-unstyled">
 {% for author in authors %}
     <li>
-        <h3>
-            <a href="{% url "event_list_author" author.username %}"
-            >{{ author.get_full_name|default:author.username }}</a>
+        <h3 class="sidebar__entry">
+            <a href="{% url "event_list_author" author.username %}" class="sidebar__entry">{{ author.get_full_name|default:author.username }}</a>
+            ({{ author.event_count }})
         </h3>
-        ({{ author.event_count }})
     </li>
 {% endfor %}
 </ul>
@@ -104,21 +103,21 @@
 {% endblock %}
 
 {% block event_feeds %}
-<h2 class="sidebar__title">{% trans "Feeds" %}</h2>
+<h2 class="sidebar__title">{% trans "Feeds" %}</h2><br>
 {% if tag %}
-    <a href="{% url "event_feed_tag" tag.slug "rss" %}">{% trans "RSS" %}</a> /
-    <a href="{% url "event_feed_tag" tag.slug "atom" %}">{% trans "Atom" %}</a>
+    <a href="{% url "event_feed_tag" tag.slug "rss" %}" class="sidebar__entry">{% trans "RSS" %}</a> /
+    <a href="{% url "event_feed_tag" tag.slug "atom" %}" class="sidebar__entry">{% trans "Atom" %}</a>
 {% endif %}
 {% if location %}
-    <a href="{% url "event_feed_location" location.slug "rss" %}">{% trans "RSS" %}</a> /
-    <a href="{% url "event_feed_location" location.slug "atom" %}">{% trans "Atom" %}</a>
+    <a href="{% url "event_feed_location" location.slug "rss" %}" class="sidebar__entry">{% trans "RSS" %}</a> /
+    <a href="{% url "event_feed_location" location.slug "atom" %}" class="sidebar__entry">{% trans "Atom" %}</a>
 {% endif %}
 {% if author %}
-    <a href="{% url "event_feed_author" author.username "rss" %}">{% trans "RSS" %}</a> /
-    <a href="{% url "event_feed_author" author.username "atom" %}">{% trans "Atom" %}</a>
+    <a href="{% url "event_feed_author" author.username "rss" %}" class="sidebar__entry">{% trans "RSS" %}</a> /
+    <a href="{% url "event_feed_author" author.username "atom" %}" class="sidebar__entry">{% trans "Atom" %}</a>
 {% endif %}
 {% if not tag and not location and not author %}
-    <a href="{% url "event_feed" "rss" %}">{% trans "RSS" %}</a> /
-    <a href="{% url "event_feed" "atom" %}">{% trans "Atom" %}</a>
+    <a href="{% url "event_feed" "rss" %}" class="sidebar__entry">{% trans "RSS" %}</a> /
+    <a href="{% url "event_feed" "atom" %}" class="sidebar__entry">{% trans "Atom" %}</a>
 {% endif %}
 {% endblock %}
