--- a/templates/agenda/event_list.html
+++ b/templates/agenda/event_list.html
@@ -69,11 +69,9 @@
 {% endif %}
 
 {% block event_calendar %}
-<p>
-    <a href='{% icalendar_url %}' target="_blank" class="">
-        Subscribe to all events in Google Calendar/Outlook/iCal
-    </a>
-</p>
+<p><a href='{% icalendar_url %}' target="_blank" class="">
+    {% trans "Subscribe to all events in" %} Google Calendar/Outlook/iCal
+</a></p>
 {% endblock %}
 
 {% for event in events.object_list %}
