--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="{{ LANGUAGE_CODE }}"{% if LANGUAGE_BIDI %} dir="rtl"{% endif %}>
-{% load pages_tags mezzanine_tags i18n staticfiles keyword_tags %}
+{% load pages_tags mezzanine_tags i18n staticfiles keyword_tags event_tags %}
 <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -106,6 +106,11 @@
             <div class="site__content__header">
                 <h2 class="page__title">{% block title %}{% endblock %}</h2>
             </div>
+            {% block event_calendar %}
+            <p><a href='{% icalendar_url %}' target="_blank" class="">
+                {% trans "Subscribe to all events in" %} Google Calendar/Outlook/iCal
+            </a></p>
+            {% endblock %}
             <main class="main" role="main">
                 {% block main %}{% endblock %}
             </main>
