--- a/festival/static/scss/base/_buttons.scss
+++ b/festival/static/scss/base/_buttons.scss
@@ -131,10 +131,17 @@
 }
 
 // Social buttons
+.share__button {
+  display: block;
+  text-align: center;
+  margin: 2rem auto;
+}
+
 .btn-twitter {
   background: $color-twitter;
   color: white;
   border-color: darken($color-twitter , 10);
+  margin: 0 1rem;
   &:hover {
     background-color: darken($color-twitter , 10);
   }
@@ -144,6 +151,7 @@
   background: $color-facebook;
   color: white;
   border-color: darken($color-facebook , 10);
+  margin: 0 1rem;
   &:hover {
     background-color: darken($color-facebook , 10);
   }
