--- a/app/templates/agenda/event_detail.html
+++ b/app/templates/agenda/event_detail.html
@@ -23,6 +23,12 @@
 
 {% block main %}
 
+{% block event_calendar %}
+<p><a href='{% icalendar_url %}' target="_blank" class="">
+    {% trans "Subscribe to all events in" %} Google Calendar/Outlook/iCal
+</a></p>
+{% endblock %}
+
 {% block event_detail_postedby %}
 {% editable event.start event.end event.location %}
 <p class="event__meta">
@@ -59,7 +65,7 @@
     Add to Google Calendar
 </a>
 <a href='{% icalendar_url %}' class="">
-    Add to Outlook/iCal
+    {% trans "Add to" %} Outlook/iCal
 </a></p>
 {% endblock %}
 
