--- a/templates/agenda/event_detail.html
+++ b/templates/agenda/event_detail.html
@@ -16,18 +16,16 @@
     {% editable event.title %}{{ event.title }}{% endeditable %}
 {% endblock %}
 
+{% block event_calendar %}
+<a href='{% icalendar_url %}' target="_blank" class="">{% trans "Subscribe to all events in" %} Google Calendar/Outlook/iCal</a>
+{% endblock %}
+
 {% block breadcrumb_menu %}
 {{ block.super }}
 <li class="active">{{ event.title }}</li>
 {% endblock %}
 
 {% block main %}
-
-{% block event_calendar %}
-<p><a href='{% icalendar_url %}' target="_blank" class="">
-    {% trans "Subscribe to all events in" %} Google Calendar/Outlook/iCal
-</a></p>
-{% endblock %}
 
 {% block event_detail_postedby %}
 {% editable event.start event.end event.location %}
