--- a/templates/agenda/event_list.html
+++ b/templates/agenda/event_list.html
@@ -41,6 +41,10 @@
 {% endif %}
 {% endblock %}
 
+{% block event_calendar %}
+<a href='{% icalendar_url %}' target="_blank" class="">{% trans "Subscribe to all events in" %} Google Calendar/Outlook/iCal</a>
+{% endblock %}
+
 {% block main %}
 {% if tag or location or year or month or author %}
     {% block event_list_filterinfo %}
@@ -67,12 +71,6 @@
     {% endblock %}
     {% endif %}
 {% endif %}
-
-{% block event_calendar %}
-<p><a href='{% icalendar_url %}' target="_blank" class="">
-    {% trans "Subscribe to all events in" %} Google Calendar/Outlook/iCal
-</a></p>
-{% endblock %}
 
 {% for event in events.object_list %}
     {% block event_list_event_title %}
